create models, routes  and curl scripts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Shopping-Store",
+  "name": "staff-packing-control-trip",
   "version": "0.0.1",
   "description": "",
   "main": "server.js",
